--- a/index.html
+++ b/index.html
@@ -32,50 +32,27 @@
             <div class="article">
                 <div class="title">
                     <a href=#>
-                        Test post #3
+                        Test post
                     </a>
                 </div>
                 <div class="date">
-                        10 seconds ago
-                    </div>
+                        1 second ago
+                </div>
                 <div class="content">
                     <div class="content_img">
                         <img src="post_img.jpg">
                     </div>
-                    Some text after picture.
+                    <text>Some text after picture.</text>
                 </div>
-            </div>
-            <div class="article">
-                <div class="title">
-                    <a href=#>
-                        Test post #2
-                    </a>
-                </div>
-                <div class="date">
-                        1 minute ago
+                <div class="post_footer">
+                    <div class="post_rate">
+                        <div class="plus">+</div> 20 likes <div class="minus">-</div>
                     </div>
-                <div class="content">
-                    <div class="content_img">
-                        <img src="post_img.jpg">
+                    <div class="posted_by">
+                         Posted by <img src="user_img.jpg"><a id="username" href="#"> @Kitty1337</a>
                     </div>
-                    And another text after picture.
                 </div>
-            </div>
-            <div class="article">
-                <div class="title">
-                    <a href=#>
-                        Test post #1
-                    </a>
-                </div>
-                <div class="date">
-                        2 hours ago
-                    </div>
-                <div class="content">
-                    <div class="content_img">
-                        <img src="post_img.jpg">
-                    </div>
-                    There is nothing
-                </div>
+                
             </div>
         </div>
         <script src="script.js"></script>
